# hinty

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  build.sh  config.example.toml  default.nix  devshell.nix  flake.nix  pyproject.toml  result
docs/: DRAFT.md
hinty/: config.py  main.py
hinty/agents/: __init__.py  router.py
hinty/baml_client/: __init__.py  async_client.py  inlinedbaml.py  parser.py  stream_types.py  sync_client.py  types.py
hinty/baml_src/: clients.baml  resume.baml  router.baml
hinty/cli/: __init__.py  chat.py  cli.py  commands.py  context_manager.py  llm.py  models.py  theme.py
hinty/core/: context_manager.py  models.py
src/: main.rs
src/hinty/: config.py  main.py
src/hinty/agents/: chatgpt.py  coder.py  router.py
src/hinty/baml_client/: __init__.py  async_client.py  inlinedbaml.py  parser.py  stream_types.py  sync_client.py  type_builder.py  type_map.py  types.py
src/hinty/baml_src/: chatgpt.baml  clients.baml  coder.baml  generators.baml  models.baml  pdf_parser.baml  tools.baml
src/hinty/cli/: __init__.py  cli.py  command_handlers.py  commands.py  display_utils.py  theme.py  utils.py
src/hinty/context/: analyze_related_files.py  helpers.py  language.py  symbol_extractor.py
src/hinty/core/: clients.py  context_manager.py  llm.py  models.py  project_manager.py  utils.py
src/hinty/tools/: apply_diff.py  fetch_url.py  file_diff.py  file_operations.py  rag.py  search_and_replace.py  search_web.py  write_file.py
src/hinty/utils/: __init__.py  cache.py  file_operations.py  search_and_replace.py  tree.py  tree_sitter.py
tests/: dummy.py  dummy2.py  sample.txt  test_abort.py  test_cli.py  test_fetch_url.py  test_get_context_coder.py  test_multiple_line_prompt.py  test_rag.py  test_relate_context.py  test_relate_context_1.py  test_relate_context_2.py  test_rich_choices.py  test_stream.py  test_stream2.py  test_tavily_search.py  test_thinking.py  test_tool_file_diff.py  test_tool_search_replace.py  test_treesiter.py
