[project]
name = "hinty"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
  "aiofiles>=25.1.0",
  "aiohttp>=3.13.2",
  "baml-py==0.214.0",
  "click>=8.3.1",
  "duckduckgo-mcp-server>=0.1.1",
  "google-genai>=1.52.0",
  "loguru>=0.7.3",
  "lxml>=6.0.2",
  "marker-pdf>=1.10.1",
  "nltk>=3.9.2",
  "numpy>=2.3.5",
  "pathspec>=0.12.1",
  "platformdirs>=4.0.0",
  "prompt-toolkit>=3.0.52",
  "pydantic>=2.12.4",
  "pyfzf>=0.3.1",
  "pypdf>=6.3.0",
  "rank-bm25>=0.2.2",
  "rich>=14.2.0",
  "sentence-transformers>=5.1.2",
  "tavily-python>=0.7.13",
  "textual>=6.7.0",
  "torch>=2.9.1",
  "tree-sitter>=0.25.2",
  "tree-sitter-cpp>=0.23.4",
  "tree-sitter-go>=0.25.0",
  "tree-sitter-java>=0.23.5",
  "tree-sitter-javascript>=0.25.0",
  "tree-sitter-python>=0.25.0",
  "tree-sitter-rust>=0.24.0",
  "tree-sitter-typescript>=0.23.2",
  "typing-extensions>=4.15.0",
]

[tool.uv.sources]
torch = [{ index = "pytorch-cpu" }]
torchvision = [{ index = "pytorch-cpu" }]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[build-system]
requires = ["uv_build>=0.9.0,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = ["dotenv>=0.9.9"]

[project.scripts]
hinty = "hinty.main:cli"
