[project]
name = "hinty"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "baml-py>=0.218.1",
    "loguru>=0.7.3",
    "platformdirs>=4.5.1",
    "prompt-toolkit>=3.0.52",
    "rich>=14.3.2",
]

[build-system]
requires = ["uv_build>=0.9.0,<0.10.0"]
build-backend = "uv_build"

[project.scripts]
hinty = "hinty.main:cli"
